# eCZ-600

./: .gitattributes  BUILD.md  README.md
src/source/: CMakeLists.txt  Makefile.linux_gtk_sdl2  Makefile.linux_gtk_sdl2_dbgr  Makefile.mac_cocoa2  Makefile.mac_cocoa2_dbgr  Makefile.win_gui2  Makefile.win_gui2_dbgr  README.md  README_SDL.md  README_WIN.md  mk_deps.mk  mk_linux_sdl.mk  mk_mac_sdl.mk  mk_win_sdl.mk
src/source/Eclipse/sdl_linux/: .cproject  .project
src/source/Eclipse/sdl_win/: .cproject  post_build.sh  pre_build.sh
src/source/VC++2010/: library_sdl.props  x68000.vcxproj  x68000.vcxproj.filters  x68000_sdl.vcxproj  x68000_sdl.vcxproj.filters
src/source/VC++2013/: library_sdl.props  post_build.bat  x68000.vcxproj  x68000.vcxproj.filters  x68000_sdl.vcxproj  x68000_sdl.vcxproj.filters
src/source/VC++2015/: library_sdl.props  x68000.vcxproj  x68000.vcxproj.filters  x68000_sdl.vcxproj  x68000_sdl.vcxproj.filters
src/source/VC++2017/: library_sdl.props  post_build.bat  x68000.vcxproj  x68000.vcxproj.filters  x68000_sdl.vcxproj  x68000_sdl.vcxproj.filters
src/source/VC++2019/: library_sdl.props  post_build.bat  x68000.vcxproj  x68000.vcxproj.filters  x68000_sdl.vcxproj
src/source/Xcode/x68000_cocoa2/x68000.xcodeproj/: project.pbxproj
src/source/include/: 00dir.txt  inttypes.h
src/source/lib/Win32/: 00dir.txt
src/source/lib/x64/: 00dir.txt
src/source/locale/: list.xml
src/source/locale/ja/LC_MESSAGES/: x68000.mo  x68000.po
src/source/patch/: SDL-1.2.15-mac-keyboard.patch  SDL2-2.0.8-mac-keyboard.patch  SDL2-2.26.5-mac-keyboard.patch  SDL2-2.28.5-mac-keyboard.patch
src/source/src/: cbitmap.h  cchar.cpp  cchar.h  ccolor.h  clocale.h  cmutex.cpp  cmutex.h  common.cpp  common.h  config.cpp  config.h  cpixfmt.cpp  cpixfmt.h  cptrlist.h  csurface.h  curtime.cpp  curtime.h  d88_defs.h  debugger_bpoint.cpp  debugger_bpoint.h  debugger_defs.h  debugger_socket.cpp  debugger_socket.h  debugger_symbol.cpp  debugger_symbol.h  depend.cpp  depend.h  emu.h  emu_osd.h  emumsg.cpp  emumsg.h  fifo.cpp  fifo.h  fileio.cpp  fileio.h  keycode.h  labels.cpp  labels.h  loadlibrary.h  logging.h  (+11 more)
src/source/src/extra/: tchar.h
src/source/src/gui/: gui.h  gui_base.cpp  gui_base.h  gui_keybinddata.cpp  gui_keybinddata.h  ledbox.h  sdl2_ledbox.cpp  sdl2_ledbox.h  vkeyboard.h  vkeyboard_x68000.h
src/source/src/gui/cocoa/: cocoa_basepanel.h  cocoa_basepanel.mm  cocoa_configpanel.h  cocoa_configpanel.mm  cocoa_fontpanel.h  cocoa_fontpanel.mm  cocoa_gui.h  cocoa_gui.mm  cocoa_hdtypepanel.h  cocoa_hdtypepanel.mm  cocoa_joysetpanel.h  cocoa_joysetpanel.mm  cocoa_key_trans.h  cocoa_key_trans.mm  cocoa_keybindctrl.h  cocoa_keybindctrl.mm  cocoa_keybindpanel.h  cocoa_keybindpanel.mm  cocoa_ledbox.h  cocoa_ledbox.mm  cocoa_loggingpanel.h  cocoa_loggingpanel.mm  cocoa_midlatepanel.h  cocoa_midlatepanel.mm  cocoa_recaudpanel.h  cocoa_recaudpanel.mm  cocoa_recvidpanel.h  cocoa_recvidpanel.mm  cocoa_savedatarec.h  cocoa_savedatarec.mm  cocoa_seldrvpanel.h  cocoa_seldrvpanel.mm  cocoa_vkeyboard.h  cocoa_vkeyboard.mm  cocoa_volumepanel.h  cocoa_volumepanel.mm  scancodes_darwin.h
src/source/src/gui/gtk_x11/: gtk_aboutbox.cpp  gtk_aboutbox.h  gtk_configbox.cpp  gtk_configbox.h  gtk_dialogbox.cpp  gtk_dialogbox.h  gtk_filebox.cpp  gtk_filebox.h  gtk_folderbox.cpp  gtk_folderbox.h  gtk_hdtypebox.cpp  gtk_hdtypebox.h  gtk_joysetbox.cpp  gtk_joysetbox.h  gtk_keybindbox.cpp  gtk_keybindbox.h  gtk_keybindctrl.cpp  gtk_keybindctrl.h  gtk_keysym_compat.h  gtk_ledbox.cpp  gtk_ledbox.h  gtk_loggingbox.cpp  gtk_loggingbox.h  gtk_midlatebox.cpp  gtk_midlatebox.h  gtk_recaudbox.cpp  gtk_recaudbox.h  gtk_recvidbox.cpp  gtk_recvidbox.h  gtk_vkeyboard.cpp  gtk_vkeyboard.h  gtk_volumebox.cpp  gtk_volumebox.h  gtk_x11_gui.cpp  gtk_x11_gui.h  gtk_x11_key_trans.cpp  gtk_x11_key_trans.h  x11_ledbox.cpp  x11_ledbox.h  x11_vkeyboard.cpp  (+1 more)
src/source/src/gui/windows/: scancodes_windows.h  win_aboutbox.cpp  win_aboutbox.h  win_configbox.cpp  win_configbox.h  win_dialogbox.cpp  win_dialogbox.h  win_filebox.cpp  win_filebox.h  win_folderbox.cpp  win_folderbox.h  win_fontbox.cpp  win_fontbox.h  win_gui.cpp  win_gui.h  win_hdtypebox.cpp  win_hdtypebox.h  win_joysetbox.cpp  win_joysetbox.h  win_key_trans.cpp  win_key_trans.h  win_keybindbox.cpp  win_keybindbox.h  win_keybindctrl.cpp  win_keybindctrl.h  win_ledbox.cpp  win_ledbox.h  win_loggingbox.cpp  win_loggingbox.h  win_midlatebox.cpp  win_midlatebox.h  win_recaudbox.cpp  win_recaudbox.h  win_recvidbox.cpp  win_recvidbox.h  win_seldrvbox.cpp  win_seldrvbox.h  win_sndfilterbox.cpp  win_sndfilterbox.h  win_vkeyboard.cpp  (+5 more)
src/source/src/osd/: d88_files.cpp  d88_files.h  debugger_console.cpp  debugger_console.h  emu.cpp  emu_input.cpp  emu_input.h  emu_input_keysym.cpp  emu_screen.cpp  emu_sound.cpp  gnu_clocale.cpp  gnu_clocale.h  keybind.cpp  keybind.h  logging.cpp  opengl.cpp  opengl.h  osd_midi.cpp  osd_midi.h  parseopt.cpp  parseopt.h  screenmode.cpp  screenmode.h  simple_clocale.cpp  simple_clocale.h  vkeyboardbase.cpp  vkeyboardbase.h  windowmode.cpp  windowmode.h
src/source/src/osd/SDL/: sdl_cbitmap.cpp  sdl_cbitmap.h  sdl_ccolor.cpp  sdl_ccolor.h  sdl_common.h  sdl_csurface.cpp  sdl_csurface.h  sdl_debugger_console.cpp  sdl_debugger_console.h  (+22 more)
src/source/src/res/: resource.h
src/source/src/video/: rec_audio.cpp  rec_audio.h  rec_common.cpp  rec_common.h  rec_video.cpp  rec_video.h
src/source/src/vm/: debugger.cpp  debugger.h  debugger_base.cpp  debugger_base.h  device.cpp  device.h  disk.cpp  disk.h  disk_parser.cpp  disk_parser.h  event.cpp  event.h  harddisk.cpp  harddisk.h  i8255.cpp  i8255.h  mc68000.cpp  mc68000.h  mc68000_consts.h  mc68000cycs.cpp  mc68000dasm.cpp  mc68000dasm.h  mc68000fpu.cpp  mc68000fpu.h  mc68000mmu.cpp  mc68000mmu.h  mc68000ops.h  noise.cpp  noise.h  parsewav.cpp  parsewav.h  paw_datas.cpp  paw_datas.h  paw_defs.cpp  paw_defs.h  paw_dft.cpp  paw_dft.h  paw_file.cpp  paw_file.h  paw_format.cpp  (+17 more)
src/source/tools/: m68k_in.lst  m68kdasm_in.lst  m68kdasm_make.py  m68kdasm_ss.txt  m68kmake.py  m68kops.cpp  mc68000ops.cpp
(+159 files in other folders)
